--- a/.github/workflows/generate-json.yml
+++ b/.github/workflows/generate-json.yml
@@ -1,12 +1,12 @@
 name: Generate Articles and Books JSON
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'blog/**'
-      - 'scripts/generate_json.py'
+#  push:
+#    branches:
+#      - main
+#    paths:
+#      - 'blog/**'
+#      - 'scripts/generate_json.py'
   workflow_dispatch:
 
 jobs:
